ND-1: login and register page

--- a/assets/css/new-template.css
+++ b/assets/css/new-template.css
@@ -1,6 +1,6 @@
 /*LOGIN PAGE*/
 .authen-page{
-    background-image: url("../../public/images/main/landing.png");
+    background-image: url("../../public/images/main/landing.jpg");
     background-position: top;
     background-size: cover;
     overflow: hidden;
