--- a/assets/css/new-template.css
+++ b/assets/css/new-template.css
@@ -1,16 +1,16 @@
 /*LOGIN PAGE*/
 .authen-page{
     background-image: url("../../public/images/main/landing.jpg");
-    background-position: top;
+    background-position: center center;
     background-size: cover;
     overflow: hidden;
     min-height: 1000px;
 }
-@media (min-width: 1920px){
-    .authen-page .container {
-        max-width: 1640px;
-    }
-}
+/*@media (min-width: 1920px){*/
+    /*.authen-page .container {*/
+        /*max-width: 1640px;*/
+    /*}*/
+/*}*/
 .authen-page .container-fluid{
     background-color: rgba(0,0,0,0.3);
     height: 70px;
@@ -43,7 +43,7 @@
     border: 1px solid rgba(0,0,0,0);
     border-radius: 20px;
     background-color: rgba(0,0,0,0.3);
-    padding-top: 50px;
+    padding-top: 15px;
     padding-left: 0px;
     padding-right: 0px;
     margin-bottom: 80px;
@@ -52,7 +52,7 @@
     font-weight: normal;
 }
 .authen-page .body-content .description{
-    padding: 30px 15px;
+    padding: 15px 15px;
     font-weight: 300;
 
 }
@@ -68,7 +68,7 @@
 }
 .authen-page .body-content .links{
     margin-top: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
     display: inline-block;
     position: relative;
 }
@@ -79,9 +79,18 @@
 }
 .authen-page .body-content .new-users{
     background-color: rgba(255,255,255,0.9);
-    padding-top: 50px;
+    padding-top: 10px;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+}
+.authen-page .title{
+    font-size: 13px !important;
+    font-weight: 300;
+    margin-bottom: 0px !important;
+}
+.authen-page .body-content .new-users .title{
+    font-size: 13px;
+    font-weight: 300;
 }
 .authen-page .body-content .new-users .users{
     display: flex;
