--- a/assets/css/new-template.css
+++ b/assets/css/new-template.css
@@ -6,6 +6,9 @@
     overflow: hidden;
     min-height: 1000px;
 }
+.authen-page .container{
+    margin-top: -70px;
+}
 /*@media (min-width: 1920px){*/
     /*.authen-page .container {*/
         /*max-width: 1640px;*/
