ND-1: update style

--- a/assets/css/new-template.css
+++ b/assets/css/new-template.css
@@ -6,6 +6,12 @@
     overflow: hidden;
     min-height: 1000px;
 }
+@media screen and (max-width: 1023px) {
+    .authen-page{
+        min-height: 100%;
+        height: auto;
+    }
+}
 .authen-page .container{
     margin-top: -70px;
 }
