--- a/assets/css/react-main.css
+++ b/assets/css/react-main.css
@@ -126,12 +126,15 @@ Description: "HTML-template"
 .header {
   height: 70px;
   background-color: #fff;
-  padding-right: 70px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 21; }
+  z-index: 21;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
   .header .page-title {
     padding: 26px 50px 26px 100px;
     text-transform: uppercase;
@@ -166,7 +169,9 @@ Description: "HTML-template"
       padding: 15px; }
 
 .header-content-wrapper {
-  height: 100%; }
+  height: 100%;
+  padding-top: 10px;
+}
 
 .header-spacer {
   display: block;
@@ -279,29 +284,50 @@ Description: "HTML-template"
   display: inline-block; }
 
 .control-icon {
-  margin-right: 29px;
+
   fill: #9a9fbf;
   margin-top: 8px; }
   .control-icon > svg {
     height: 20px; }
   .control-icon.has-items {
-    fill: #fff; }
+    fill: #fff;
+    border: 1px solid #3464D4;
+    border-radius: 50%;
+    background-color: #3464DA;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    vertical-align: middle;
+    padding: 5px;
+  }
+  .control-icon.has-items a{
+    color: #ffffff;
+  }
   .control-icon .label-avatar {
-    width: 19px;
-    height: 19px;
-    line-height: 19px;
-    top: -12px;
-    right: -9px; }
+    width: 12px;
+    height: 12px;
+    line-height: 12px;
+    top: 7px;
+    right: 1px; }
   .control-icon .more-dropdown {
     width: 380px;
-    top: 35px;
-    right: -180px;
-    padding: 0 0 70px 0; }
+    top: 51px;
+    right: -30px;
+    padding: 0; }
     .control-icon .more-dropdown .view-all{
-      /* padding: 20px; */
-      color: #fff; }
+        color: #000000;
+        padding: 10px;
+        font-size: 15px;
+        font-weight: 300;
+        border: 1px solid #D0D0D0;
+        border-top: none;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        bottom: -43px;
+    }
       .control-icon .more-dropdown .view-all:hover {
-        color: #fff; }
+        color: #000000; }
     .control-icon .more-dropdown .notification-list {
       padding: 0; }
   .control-icon .ui-block-title a {
@@ -378,11 +404,11 @@ Description: "HTML-template"
   .view-all:hover {
     color: #fff; }
 
-.author-page {
-  margin-left: 50px; }
+/*.author-page {*/
+  /*margin-left: 50px; }*/
   .author-page .more-dropdown {
     width: 300px;
-    top: calc(100% + 5px);
+    top: calc(100% + 16px);
     right: -30px;
     padding: 0; }
   .author-page .chat-settings {
@@ -2734,14 +2760,15 @@ img {
     border-bottom: 0; }
 
 .ui-block-title {
-  padding: 23px 25px 18px;
+  padding: 10px;
   line-height: 1;
-  border-bottom: 1px solid #e6ecf5;
-  border-top: 1px solid #e6ecf5;
+  border: 1px solid #3464D4;
   display: table;
   width: 100%;
   position: relative;
-  border-radius: 5px 5px 0 0; }
+  border-radius: 21px;
+  text-align: center;
+  }
   .ui-block-title .more {
     padding-left: 25px;
     text-align: right;
@@ -2749,7 +2776,13 @@ img {
   .ui-block-title > * {
     margin-bottom: 0;
     display: table-cell;
-    vertical-align: middle; }
+    vertical-align: middle;
+    color: #ffffff;
+    font-weight: 300;
+  }
+  .ui-block-title .fa-star{
+    color: #FFEB00;
+  }
   .ui-block-title.ui-block-title-small {
     padding: 10px 25px; }
     .ui-block-title.ui-block-title-small .title {
@@ -4345,15 +4378,15 @@ fieldset[disabled] .checkbox, fieldset[disabled] .checkbox input[type=checkbox],
   .more > svg {
     cursor: pointer; }
 
-.more-with-triangle:before {
-  position: absolute;
-  display: inline-block;
-  content: '';
-  top: -7px;
-  border-right: 7px solid transparent;
-  border-left: 7px solid transparent;
-  border-bottom: 7px solid #fff;
-  right: 25px; }
+/*.more-with-triangle:before {*/
+  /*position: absolute;*/
+  /*display: inline-block;*/
+  /*content: '';*/
+  /*top: -7px;*/
+  /*border-right: 7px solid transparent;*/
+  /*border-left: 7px solid transparent;*/
+  /*border-bottom: 7px solid #fff;*/
+  /*right: 25px; }*/
 
 .more-with-triangle.triangle-bottom-right:before {
   top: auto;
@@ -5431,7 +5464,9 @@ fieldset[disabled] .checkbox, fieldset[disabled] .checkbox input[type=checkbox],
 
 /*------------- #OVERLAY-MENU --------------*/
 body {
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  background: #ffffff;
+}
   body:before {
     content: '';
     display: block;
@@ -9408,10 +9443,10 @@ ol ol li {
   background-color: #7442ce; }
 
 .bg-primary {
-  background-color: #ff5e3a; }
+  background-color: #3464D4; }
 
 .bg-secondary {
-  background-color: #3f4257; }
+  background-color: #008FE5; }
 
 .bg-purple {
   background-color: #7c5ac2; }
@@ -9453,7 +9488,7 @@ ol ol li {
   background-color: #1ed760; }
 
 .bg-facebook {
-  background-color: #2f5b9d; }
+  background-color: #3464D4; }
 
 .bg-twitter {
   background-color: #38bff1; }
@@ -9466,9 +9501,14 @@ ol ol li {
 
 .bg-white {
   background-color: #fff; }
-
+.bg-red {
+  background-color: #C63F17;
+}
+.bg-smoke-light{
+  background-color: #F2F2F2;
+}
 .c-primary {
-  color: #ff5e3a; }
+  color: #3464D4; }
 
 .c-white {
   color: #fff; }
