--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -32,19 +32,19 @@
     padding: 10px 0px;
     border-top: 2px solid;
     border-color: #0091ff3b;
+    margin: auto;
 }
 
 .menu-bottom-image {
     max-width: 30px;
     height: auto;
 }
-
-@media screen and (max-width: 768px) {
-    #newfeeds {
-        padding: 0;
-        margin: 0px -15px;
+@media screen and (max-width: 1024px) {
+    .couple-button{
+        padding-bottom: 170px;
     }
-
+}
+@media screen and (max-width: 768px) {
     .control-icon.more.has-items {
         font-size: 1.5em;
         margin: 0 !important;
@@ -54,6 +54,46 @@
         display: block;
         height: 130px;
     }
+    .verify-block {
+        margin-top: 10px;
+    }
+    .slick-slide img{
+        width: 100% !important;
+    }
+    .couple-button{
+        padding-bottom: 40px;
+    }
+    .leftslider{
+        padding-right: 15px;
+    }
+    .main-content-wrap{
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
+@media screen and (max-width: 576px){
+    .group-navigator{
+        margin-bottom: 10px;
+    }
+    .search-box{
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+    .post .post-actions .btn-post{
+        font-size: 12px;
+    }
+    .search-box .form-control{
+        font-size: 14px;
+    }
+    .couple-button{
+        padding-bottom: 40px;
+    }
+    .wave .wave-form{
+        margin-bottom: 30px;
+    }
+    /*.image-card img{*/
+        /*width: auto;*/
+    /*}*/
 }
 .author-mobile{
     position: fixed;
