--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -1853,10 +1853,11 @@ img.thumbnail-img-slider {
     justify-content: space-between;
 }
 .couple-button button{
-    height: 64px;
-    width: 64px;
+    height: 54px;
+    width: 54px;
     background-color: #3464D4;
     box-shadow: none;
+    padding: 0px !important;
 }
 .custom-card .user-name{
     font-size: 24px;
