--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -1670,8 +1670,8 @@ img.thumbnail-img-slider {
     border: 1px solid #D0D0D0;
     border-radius: 8px;
     color: #707070;
-    font-weight: bold;
-    font-size: 18px;
+    font-weight: 400;
+    font-size: 14px;
     height: 36px;
 }
 .search-box .fa-search{
@@ -1766,6 +1766,7 @@ img.thumbnail-img-slider {
     padding-right: 0px;
     border-color: #D0D0D0;
     font-size: 14px;
+    box-shadow: none !important;
 }
 .news-feed-form .add-options-message{
     padding: 8px 25px;
@@ -2058,3 +2059,12 @@ img.thumbnail-img-slider {
     margin-right: 10px;
 }
 /*END FRIEND PAGE: YOU LIKE, LIKE YOU, SKIPPED - NEW TEMPLATE*/
+/*BEGIN PROFILE PAGE - NEW TEMPLATE*/
+a.link-default{
+    font-size: 12px;
+    color: #0586DA !important;
+}
+.tab-pane.active#pills-timeline{
+    display: flex;
+}
+/*END PROFILE PAGE - NEW TEMPLATE*/
