--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -18,7 +18,7 @@ body a {
     padding: 0.75em !important;
     margin: 0!important;
     text-align: center;
-    box-shadow: #7f8c8d 2px 2px;
+    /*box-shadow: #7f8c8d 2px 2px;*/
 }
 
 .post-info-item {
@@ -32,7 +32,6 @@ body a {
 .verification-icon img{
     width: 40px;
     height:40px;
-    border-radius: 0 !important;
 }
 
 .notification-icon svg{
@@ -711,15 +710,14 @@ input[type=radio], input[type=checkbox] {
     width: 125px;
     height: 125px;
     position: absolute;
-    left: 0;
+    left: 15px;
     border-radius: 50%;
-    border: solid 2px #2980b9;
-    opacity: 0.3;
+    border: solid 1px #D0D0D0;
     cursor: pointer;
 }
 
 .btn-change-avatar:hover {
-    opacity: 0.8;
+    opacity: 0.3;
     background-color: #2c3e50
 }
 
@@ -1063,6 +1061,13 @@ button.slick-arrow {
 
 #regulations-btn {
     width: 100%;
+    padding-bottom: 0px;
+    vertical-align: bottom;
+    padding-top: 0px;
+    margin-top: 20px;
+    padding-left: 0px;
+    margin-left: 0px;
+    text-align: right;
 }
 
 .btn-function {
@@ -1231,21 +1236,25 @@ img.slide-image {
 }
 
 .user-photo-icon {
-    font-size: 3em;
+    font-size: 14px;
+    font-weight: 400;
 }
 
-button.btn.btn-user-photo {
+.btn-user-photo {
     background-color: #2980b9;
-    height: 100px;
-    width:  100%;
+    padding: 5px !important;
+    min-height: 76px;
 }
 
 .btn-upload-photo {
     background-color: #34495e;
-    height: 100px;
-    width:  100%;
+    padding: 5px !important;
+    min-height: 76px;
 }
-
+.btn-user-photo b, .btn-upload-photo b{
+    font-weight: 400;
+    font-size: 14px;
+}
 .slider-control-bottomcenter {
     display: none;
 }
@@ -1433,18 +1442,30 @@ button.arrow-btn {
 }
 
 .ReactModal__Content.ReactModal__Content--after-open {
-    padding: 30px!important;
+    /*padding: 30px!important;*/
     top: 50%!important;
     left: 50%!important;
     right: auto!important;
     bottom: auto!important;
-    margin-right: -50%!important;
+    /*margin-right: -50%!important;*/
     transform: translate(-50%, -50%)!important;
-    max-width: 80%;
-    min-width: 60%;
-    max-height: 70%;
+    /*max-width: 50%;*/
+    /*min-width: 30%;*/
+    /*max-height: 70%;*/
 }
-
+.ReactModal__Content .image{
+    width: 100%;
+    text-align: center;
+}
+.ReactModal__Content .content{
+    width: 100%;
+    text-align: center;
+}
+.ReactModal__Content .content .btn-close{
+    position: fixed;
+    top: 0px;
+    right: 0px;
+}
 img.gift-type-image {
     width: 100%;
     height: 250px;
@@ -1494,18 +1515,18 @@ img.product-thumbnail {
 }
 
 .verify-btn {
-    border: solid 2px;
+    border: solid 1px #3464D4;
     background: none;
-    color: #2980b9;
+    color: #3464D4;
     border-radius: 20px;
     font-size: medium;
-    padding: 6px;
-    font-weight: 500;
-    width: 95px;
+    padding: 6px 18px;
+    font-weight: 400;
+    font-size: 12px;
 }
 
 .verify-btn:hover {
-    background: #2980b9;
+    background: #3464D4;
     color: #fff;
 }
 
@@ -2066,5 +2087,82 @@ a.link-default{
 }
 .tab-pane.active#pills-timeline{
     display: flex;
+}
+.left-sidebar .user-summary{
+    display: flex;
+}
+.btn-link {
+    color: #3464D4;
+    margin-bottom: 0px;
+}
+.btn-link:hover{
+    color: #ff763a;
+}
+.profile-title{
+    border-bottom: 1px solid #FF7043;
+    line-height: 40px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #3464D4;
+}
+.profile-layout .leftslider{
+    position: fixed;
+    width: 15%;
+}
+.profile-layout .main-content-wrap{
+    margin-left: 24%;
+}
+.profile-layout .col-left{
+    position: fixed;
+    width: 20%;
+    padding-right: 15px;
+    margin-left: 26.3%;
+}
+.col-right{
+    padding-left: 15px;
+}
+.disable-desktop{
+    display: none;
+    justify-content: space-between;
+}
+.leftslider .disable-desktop.list-group{
+    background-color: #ffffff;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+}
+.leftslider .disable-desktop .list-group-item{
+    display: inline-block;
+    padding: 7px 10px;
+}
+.friend-controls{
+    display: flex;
+    justify-content: space-between;
+}
+.friend-controls .circle-button {
+    background-color: #ffffff;
+    color: #ffffff;
+    width: 50px;
+    height: 50px;
+    border-color: #3464D4;
+}
+.form-control:focus{
+    border-color: #d0d2d0;
+    box-shadow: none;
+}
+.send-message{
+    text-align: left;
+    vertical-align: top;
+}
+.send-message .circle-button {
+    background: #ffffff;
+    color: #3464D4 !important;
+    padding: 0px !important;
+}
+.profile-images div[class*=" col-"]{
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
 }
 /*END PROFILE PAGE - NEW TEMPLATE*/
