--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -99,6 +99,56 @@
         height: 100%;
         overflow: hidden;
     }
+    .top-div{
+        position: fixed;
+        z-index: 2000;
+        width: 100%;
+        display: block;
+        top: 130px;
+        padding-left: 15px;
+        padding-right: 15px;
+        left: 0;
+        background: white;
+        padding-top: 15px;
+    }
+    .top-div .friend-controls-block{
+        width: 90%;
+        display: block;
+        margin-top: 10px;
+    }
+    .bottom-div{
+        margin-top: 160px;
+    }
+    .bottom-div.current-user{
+        margin-top: 100px;
+    }
+    .bottom-div .profile-timeline{
+        margin-top: 0px;
+    }
+    .td-block-title-wrap{
+        width: 100%;
+    }
+    .td-block-title-wrap .profile-title{
+
+        margin-bottom: 0px;
+    }
+    .td-block-title-wrap .td-subcat-filter{
+
+        float: right;
+        margin-top: 0px;
+    }
+    .td-block-title-wrap .td-subcat-filter .td-subcat-list{
+        display: flex;
+        margin-bottom: 0;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .td-subcat-link{
+        font-size: 12px;
+    }
+    .profile-controls .btn-upload-photo{
+        margin-top: 10px;
+    }
 }
 @media screen and (max-width: 576px){
     .group-navigator{
