--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -625,7 +625,7 @@ div#this-month {
 .btn-add-image {
     position: absolute;
     right: 5px;
-    background-color: #34495e;
+    background-color: #D0D0D0;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -637,19 +637,27 @@ div#this-month {
 }
 
 .cafe-header-banner {
-    background-color: #0c2461;
+    background-color: #3A72F4;
     padding: 15px;
     color: #fff;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
-
+.cafe-header-banner .btn-primary{
+    background-color: #ff763a;
+    border-color: #ff763a;
+}
 .cafe-header-banner h4 {
     color: #fff;
     font-weight: 600;
+    font-size: 16px;
 }
-
+.cafe-header-banner p {
+    font-size: 13px;
+    font-weight: 400;
+    color: #ffffff;
+}
 img.address-image {
     position: relative;
     padding: 2px;
@@ -721,27 +729,37 @@ input[type=radio], input[type=checkbox] {
     background-color: #2c3e50
 }
 
-#btn-normal-img {
+#btn-normal-img, #btn-normal-video {
     width: 100%;
     text-align: center;
     height: 100px;
     font-size: -webkit-xxx-large;
+    margin-top: 40px;
+    padding: 0px;
 }
-
+#btn-normal-img span, #btn-normal-video span{
+    font-size: 16px;
+    display: block;
+}
 .cafe-card {
     margin-bottom: 15px;
 }
 
 .cafe-btn {
-    top: 30% !important;
-    left: 30% !important;
+    top: 30%;
+    left: 21%;
+    display: block;
+    width: 50%;
 }
 
 .cafe-btn button {
-    background: azure;
+    background: rgba(255,255,255,0.9);
     color: black;
+    padding: 5px;
 }
-
+.cafe-btn .btn-booking{
+    margin-top: -10px;
+}
 .cafe-btn button:hover {
     background: #2980b9;
     color: #ecf0f1;
@@ -845,7 +863,7 @@ input[type=radio], input[type=checkbox] {
     margin: 10px
 }
 
-#cafe-address-icon {
+.cafe-address-icon {
     font-size: 2em !important;
 }
 
@@ -1496,10 +1514,10 @@ img.gift-type-image {
 
 .address-type {
     padding: 5px;
-    color: #fff;
-    background: crimson;
-    font-weight: 700;
+    color: #000000;
+    font-weight: 400;
     width: auto;
+    font-size: 13px;
 }
 
 .address-tag {
@@ -1673,8 +1691,8 @@ img.thumbnail-img-slider {
 }
 /*BEGIN MAIN LAYOUT - NEW TEMPLATE CSS*/
 .main-content-wrap{
-    padding-right: 26px;
-    padding-left: 29px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 .main-content-wrap .box-shadow-default{
     webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
@@ -2254,3 +2272,108 @@ a.link-default{
     display: block;
 }
 /*END PROFILE PAGE - NEW TEMPLATE*/
+
+/*BEGIN CAFE - NEW TEMPLATE*/
+.block-cafe-stores .store-item{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.block-cafe-stores .store-item:first-child{
+    padding-right: 5px;
+}
+.block-cafe-stores .store-item:first-child{
+    padding-left: 15px;
+}
+.block-cafe-stores .store-item:nth-child(2){
+    padding-left: 5px;
+}
+.block-cafe-stores .store-item:nth-child(3n+1){
+    padding-right: 5px;
+    padding-left: 15px;
+}
+.block-cafe-stores .store-item:nth-child(3n){
+    padding-left: 5px;
+    padding-right: 15px;
+}
+.store-item .image-card{
+    border-radius: unset;
+}
+.css-vj8t7z{
+    border: none !important;
+    border-bottom: 1px solid #d0d0d0 !important;
+    border-radius: unset !important;
+}
+.css-d8oujb{
+    display: none;
+}
+.btn-group-submit{
+    justify-content: space-around;
+}
+.cafe-store-box{
+    border: 1px solid #d0d0d0;
+    border-radius: 10px;
+    padding: 10px;
+}
+.cafe-store-box div[class*=" col-"]{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.cafe-store-box .slick-arrow{
+    display: none !important;
+}
+.store-images.cafe-details .image-item{
+    margin-bottom: 10px;
+}
+.store-images .image-item{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.store-images .image-item:first-child{
+    padding-right: 5px;
+}
+.store-images .image-item:nth-child(4n+1){
+    padding-left: 0px;
+}
+#btn-cafe-1{
+    border: 1px solid #3464D4 ;
+    color: #3464D4;
+}
+#btn-cafe-1:hover{
+    border: 1px solid #ff763a ;
+}
+#btn-cafe-1, #btn-cafe-2{
+    padding: 5px 15px;
+}
+.store-name{
+    font-weight: 700;
+    font-size: 16px;
+}
+.open-now span{
+    color: green;
+}
+.avatar-x-medium{
+    width: 80px;
+    height: 80px;
+    margin-left: 25px;
+}
+.btn-change-avatar.medium{
+    width: 80px;
+    height: 80px;
+    left: 25px;
+}
+.btn-change-avatar .camera{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: #000000;
+    opacity: 0.7;
+}
+.btn-change-avatar:hover{
+    opacity: 0.7;
+}
+.btn-change-avatar:hover .camera{
+    color: #ffffff;
+    opacity: 1;
+}
+/*END CAFE - NEW TEMPLATE*/
