--- a/assets/css/custom-react.css
+++ b/assets/css/custom-react.css
@@ -227,9 +227,11 @@ li.list-group-item {
 .image-card-btn .circle-button {
     margin-right: 10px;
     padding: 0px !important;
-    width: 24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
     box-shadow: none;
+    background-color: unset;
+    font-size: 24px;
 }
 
 .image-card-results {
@@ -1725,7 +1727,7 @@ img.thumbnail-img-slider {
 .leftslider{
     text-align: center;
     padding-left: 15px;
-    padding-right: 40px;
+    padding-right: 15px;
 }
 .leftslider .list-group{
     background-color: #3A72F4;
@@ -2117,15 +2119,15 @@ a.link-default{
     color: #ff763a;
 }
 .profile-title{
-    line-height: 40px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     color: #3464D4;
 }
 .profile-layout .leftslider{
     position: fixed;
-    width: 15%;
+    width: 16%;
+    padding-right: 40px;
 }
 .profile-layout .main-content-wrap{
     margin-left: 24%;
@@ -2205,9 +2207,9 @@ a.link-default{
 .profile-images .btn-previous .slick-prev{
     color: #000000 !important;
 }
-.profile-timeline{
-    margin-top: -280px;
-}
+/*.profile-timeline{*/
+    /*margin-top: -280px;*/
+/*}*/
 .friend-controls-block{
     float: right;
     margin-top: -90px;
@@ -2216,10 +2218,10 @@ a.link-default{
     margin-right: 30px;
     display: block;
 }
-.disabled{
-    /* display: none;
+.profile-layout .disabled{
+     display: none;
     opacity: 0;
-    visibility: hidden; */
+    visibility: hidden;
     -webkit-transition: opacity 600ms, visibility 600ms;
     transition: opacity 600ms, visibility 600ms;
 }
@@ -2243,13 +2245,15 @@ a.link-default{
 }
 .td-subcat-link{
     color: #3464D4;
-    font-size: 14px;
-    font-weight: 300;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 .profile-controls .btn-upload-photo{
     min-height: 0px;
     width: 110px;
     height: 35px;
+    margin-bottom: 0px;
 }
 .profile-controls .btn-upload-photo .svg-inline--fa{
     position: absolute;
@@ -2262,10 +2266,10 @@ a.link-default{
     left: 40px;
 }
 .td-subcat-dropdown{
-    width: 75px;
+    width: 85px;
 }
 .td-subcat-dropdown .td-subcat-list{
-    width: 80px;
+    width: 85px;
     display: none;
 }
 .td-subcat-dropdown .td-subcat-list.active{
@@ -2375,5 +2379,23 @@ a.link-default{
 .btn-change-avatar:hover .camera{
     color: #ffffff;
     opacity: 1;
+}
+.user-profile-summary{
+    border: 1px solid #d0d0d0;
+    border-radius: 28px;
+    padding: 5px 15px;
+}
+.events{
+    box-sizing: border-box;
+    overflow: hidden;
+    padding-top: 15px;
+}
+.color-primary{
+    color: #3464D4;
+}
+@media screen and (max-width: 1200px) {
+    .profile-layout .leftslider {
+        width: 25%;
+    }
 }
 /*END CAFE - NEW TEMPLATE*/
